CustomerResource added.
- Some methods from SalesResource were moved to the CustomerResource.

#1
